style: Fixed positional issue ... where content was displayed off-screen

--- a/src/app.css
+++ b/src/app.css
@@ -24,8 +24,6 @@ a:visited {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
   width: 100vw;
   height: 100vh;
 }
